# ltk_data

./: .baw  CHANGELOG  CHANGELOG.md  Jenkinsfile  MANIFEST.in  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg
.github/workflows/: release.yml  test.yml
docs/: index.rst
ltk_data/: __init__.py  compile.py  lookup.py  path.py  utils.py
ltk_data/corpora/: __init__.py
ltk_data/corpora/crubadan/: table.txt
ltk_data/corpora/stopwords/: README
ltk_data/corpora/words/: en
nltk_data/: __config__.py  __init__.py  compile.py  lookup.py  path.py  utils.py
nltk_data/corpora/: __init__.py
nltk_data/corpora/names/: family  female.pickle  male.pickle
nltk_data/tokenizers/punkt/: science.pickle
tests/: conftest.py  test_setup.py
